# hello-foundry-template

./: .gitignore  README.md  cargo-generate.toml
rust-crate/: Cargo.toml
rust-crate/src/: lib.rs
src/: Hello.sol
